[tool.poetry]
name = "hoba"
version = "0.1.2"
description = "Yet another secrets management toolkit"
authors = ["Michael Zaikin <mz@baking-bad.org>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/m-kus/hoba"
keywords = ['secret-management', 'password-store']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6"
python-gnupg = "*"
gitpython = "*"
loguru = "*"
fire = "*"
keyring = "*"
"keyrings.alt" = "*"
pyaml = "*"
shellingham = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hoba = 'hoba.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
